add API to get summary of unsettled balances
